stateDiagram-v2
    direction LR

    [*] --> SCHEDULED: Admin creates broadcast for distant future
    [*] --> PREPARING: Admin creates immediate broadcast (or scheduled for near future)

    SCHEDULED --> PREPARING: Pre-computation scheduler runs
    SCHEDULED --> CANCELLED: Admin cancels
    
    PREPARING --> READY: Async user fetch succeeds
    PREPARING --> FAILED: Async user fetch fails
    PREPARING --> CANCELLED: Admin cancels
    
    READY --> ACTIVE: Activation scheduler runs (scheduled time arrives)
    READY --> CANCELLED: Admin cancels
    
    ACTIVE --> EXPIRED: Expiration scheduler runs
    ACTIVE --> CANCELLED: Admin cancels via API
    ACTIVE --> FAILED: DLT event for group broadcast is consumed
    
    EXPIRED --> [*]
    CANCELLED --> [*]
    FAILED --> [*]